Common - Add user Timezone and doc for alert module